operator-toolkit/docker-registry/_ytt_lib/registry/08-services.yaml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Service
metadata:
  name: #@ "registry-{}".format(data.values.metadata.name)
  namespace: #@ data.values.metadata.namespace
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: #@ "registry-{}".format(data.values.metadata.name)
